--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -7,13 +7,15 @@
   padding: 8px;
 }
 
+form {
+  text-align: center;
+}
 
 .search {
   background-color: transparent;
-  border: 1px solid #FF7F50;
-  border-radius: 30px;
-  color: #FF7F50;
+  border: 1px solid #F4A026;
+  color: #F4A026;
   font-size: 16px;
-  margin:20px 10px 0px 10px;
+  margin:20px 10px 15px 10px;
   padding: 5px;
 }
