Agrego ultimos estilos del home

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -24,6 +24,7 @@
   border-radius: 50%;
   color: #000000;
   display: inline-block;
+  font-size: 14px;
   height: 20px;
   left: -10px;
   position: relative;
