--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,3 +1,9 @@
+.btn__img {
+  position: relative;
+  top: 3px;
+  left: 12px;
+}
+
 .card__btn {
   background-color: #F4A026;
   border: transparent;
