--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,15 +1,51 @@
+.img-arrow__artist {
+  position: relative;
+  top: -2px;
+  right: 15px;
+}
+
+.img-arrow__price {
+  position: relative;
+  top: -2px;
+  right: 15px;
+}
+
 .deco__img {
-  padding: 7px 0 5px 5px;
+  padding: 7px 0 5px 7px;
 }
 
 .select {
   align-self: center;
+  background: transparent url('../img/arrow.svg') no-repeat;
+  border: none;
   font-family: 'Libre Franklin', sans-serif;
   font-size: 16px;
+  padding: 5px;
+  -moz-appearance:none;
+	-webkit-appearance:none;
+	-ms-appearance:none;
+	-o-appearance:none;
+	appearance:none;
+	cursor:pointer;
+}
+
+.select-artist {
+  background-position-x: 138px;
+  background-position-y: 11px;
+  width: 150px;
+}
+
+.select-price {
+  background-position-x: 82px;
+  background-position-y: 11px;
+  width:106px;
+}
+
+.wapper {
+  display: flex;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .wapper-select {
-  display: flex;
-  justify-content: space-between;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  display: inline-block;
 }
