--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -43,3 +43,18 @@
   margin: 20px 0 40px 0;
   text-align: center;
 }
+
+
+
+/* Medias */
+@media (min-width: 768px) {
+  .wapper-card {
+    display: inline-block;
+    padding: 50px 55px 50px 100px;
+  }
+
+  .wapper-card + .wapper-card {
+    display: inline-block;
+    padding: 10px 55px 50px 78px;
+  }
+}
