--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -30,3 +30,19 @@ form {
 .search::-webkit-input-placeholder {
   color: #F4A026;
 }
+
+
+
+/* Medias */
+@media (min-width: 768px) {
+  form {
+    text-align: justify;
+  }
+
+  .search {
+    font-size: 20px;
+    margin:48px 10px 0 100px;
+    padding: 7px;
+    width: 285px;
+  }
+}
