--- a/src/css/home.css
+++ b/src/css/home.css
@@ -10,8 +10,14 @@
   right: 15px;
 }
 
-.deco__img {
-  padding: 7px 0 5px 7px;
+.deco-img {
+  background: transparent url('../img/nav-mobile.png') no-repeat;
+  display: inline-block;
+  margin: 0; 
+  overflow: hidden;
+  text-indent: 100%;
+  width: 16%;
+  white-space: nowrap;
 }
 
 .select {
@@ -42,10 +48,44 @@
 }
 
 .wapper {
-  display: flex;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  display: flex;
+  height: 55px;
+  padding: 7px 0 0 7px;
 }
 
 .wapper-select {
   display: inline-block;
+}
+
+
+
+/* Medias */
+@media (min-width: 768px) {
+  .deco-img {
+    background: transparent url('../img/nav-tablet.png') no-repeat;
+    width: 16%;
+  }
+
+  .select {
+    font-size: 25px;
+    background-size: 20px;
+  }
+  
+  .select-artist {
+    background-position-x: 215px;
+    background-position-y: 16px;
+    width: 240px;
+  }
+  
+  .select-price {
+    background-position-x: 135px;
+    background-position-y: 16px;
+    width: 189px;
+  }
+
+  .wapper {
+    height: 125px;
+    padding: 7px 0 0 7px;
+  }
 }
