--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -4,6 +4,7 @@
   left: 12px;
 }
 
+
 .card__btn {
   background-color: #F4A026;
   border: transparent;
@@ -36,6 +37,12 @@
   margin: 0;
   padding-top: 10px;
   font-size: 17px;
+}
+
+.card__title-btn {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .wapper-card {
