--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -45,6 +45,10 @@
   text-align: center;
 }
 
+.img__btn {
+  cursor: pointer;
+}
+
 .wapper-card {
   font-family: 'Libre Franklin', sans-serif ;
   margin: 20px 0 40px 0;
