--- a/src/css/home.css
+++ b/src/css/home.css
@@ -16,7 +16,7 @@
   margin: 0; 
   overflow: hidden;
   text-indent: 100%;
-  width: 16%;
+  width: 50px;
   white-space: nowrap;
 }
 
@@ -37,7 +37,7 @@
 @media (min-width: 768px) {
   .deco-img {
     background: transparent url('../img/nav-tablet.png') no-repeat;
-    width: 16%;
+    width: 111px;
   }
 
   .select {
@@ -60,5 +60,16 @@
   .wapper {
     height: 125px;
     padding: 7px 0 0 7px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .deco-img {
+    background: transparent url('../img/nav-dektop.png') no-repeat;
+    width: 139px;
+  }
+
+  .wapper {
+    height: 150px;
   }
 }
