--- a/src/css/sort.css
+++ b/src/css/sort.css
@@ -1,7 +1,7 @@
 .select {
   align-self: center;
-	appearance:none;
-  background: transparent url('../img/arrow.svg') no-repeat;
+  appearance:none;
+  background-color: transparent;
   border: none;
 	cursor:pointer;
   font-family: 'Libre Franklin', sans-serif;
